--- a/floatingMenu/build.gradle
+++ b/floatingMenu/build.gradle
@@ -2,12 +2,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
 
     defaultConfig {
-        minSdkVersion 11
-        targetSdkVersion 22
+        minSdkVersion 23
+        targetSdkVersion 25
     }
 
     buildTypes {
@@ -20,5 +20,5 @@ android {
 
 dependencies {
     compile 'com.larswerkman:HoloColorPicker:1.4'
-    compile 'com.android.support:support-v4:+'
+    compile "com.android.support:support-v4:25.1.0"
 }
